--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,3 +1,15 @@
+.u__margin-b-large {
+    margin-bottom: 8rem;
+}
+
 .u__margin-b-medium {
+    margin-bottom: 5rem;
+}
+
+.u__margin-b-small {
     margin-bottom: 3rem;
+}
+
+.u__margin-t-small {
+    margin-top: 1rem;
 }
