--- a/sass/components/_feature.scss
+++ b/sass/components/_feature.scss
@@ -1,16 +1,29 @@
 .feature{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    margin-top: -7rem;
-
+    // align-items: center;
+    justify-content: space-between;
+    margin-top: 2rem;
+    font-size: 1.5rem;
     &__box {
-        min-height: 20rem;
-        padding: 1rem;
+        border: 2px solid rgba($color-primary, 0.4);
+        border-radius: 3px;
+        padding: 1.25rem;
+        box-shadow: 1rem 1rem 1rem rgba($color-black, 0.3);
+        transition: all 0.3s;
 
         &:not(:last-child){
             margin-right: 2rem;
         }
+        
+        &:hover{
+            transform: scale(1.1);
+        }
+        
+    }
+    &__icon {
+        text-align: center;
+        font-size: 2.25rem;
+        color: $color-primary;
     }
 }
