--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import "components/button.scss";
 @import "components/feature.scss";
+@import "components/traditionals.scss";
 
 @import "layouts/header.scss";
 @import "layouts/navigation.scss";
