--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -21,9 +21,48 @@ body {
     }
 }
 
+.heading__secondary {
+    font-size: 4rem;
+    font-weight: 300;
+    letter-spacing: 0.25rem;
+    position: relative;
+    transition: background-color .5s ease;
+    
+    &:hover {
+        color: $color-primary;
+    }
+
+    &::after {
+        content: '';
+        display: block;
+        margin: auto;
+        height: 3px;
+        width: 100%;
+        background-color:$color-primary;
+        transition: width .5s ease, background-color .5s ease;
+    }
+
+    &:hover::after {
+        width: 5%;
+        background-color: black;
+    }
+}
+
+
+
 
 .feature-paragraph{
     margin-left: 15%;
     width: 70%;
-    margin-top: -100px;
+    margin-right: 15%;
+    font-size: 1.75rem;
+    font-weight: 400;
+}
+
+.trad_paragraph{
+    width: 70%;
+    margin-right: 15%;
+    font-size: 1.7rem;
+    font-weight: 400;
+    color: $color-grey-light-2;
 }
