--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,11 +1,40 @@
 
 .section-feature {
-    background-color: rgba($color-grey-dark, 0.2);
-    height: 500px;
-    padding: 3rem 10rem;
+    background-color: rgba($color-white, 1);
+    padding: 8rem 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
 }
 
+.section-gallery {
+    background-color: rgba($color-black, 0.5);
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    & figure {
+        flex: 1 0 25%;
+        width: 25%;
+        overflow: hidden;
+        & img {
+            transform: scale(1.15);
+            opacity: 0.3;
+            transition: all 0.3s;
+        }
+
+        & img:hover {
+            transform: scale(1);
+            opacity: 1;
+        }
+    }
+}
+
+.section-traditional {
+    background-color: rgba($color-white, 1);
+    padding: 8rem 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
