finish lage desktop

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,12 @@ body {
   font-weight: 400;
   color: #eee; }
 
+.food-n {
+  font-size: 2rem; }
+
+.food-p {
+  font-size: 1.75rem; }
+
 .u__margin-b-large {
   margin-bottom: 8rem; }
 
@@ -176,6 +182,73 @@ body {
       transform: translateX(100px);
       opacity: 0; }
 
+.food {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  flex-wrap: wrap;
+  position: relative; }
+  .food__box {
+    flex: 1 0 25%;
+    position: relative;
+    margin: 0.5rem;
+    overflow: hidden; }
+  .food__img {
+    width: 100%;
+    height: 100%;
+    border-radius: 6px; }
+  .food__card:hover .food__card--slide {
+    z-index: 100;
+    height: 100%; }
+  .food__card--front {
+    position: relative;
+    z-index: 30; }
+  .food__card--slide {
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    background-color: rgba(247, 247, 247, 0.95);
+    width: 100%;
+    height: 0;
+    border-radius: 6px;
+    transition: all 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .food__card--slide ul {
+      list-style-type: none; }
+
+.travel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%; }
+  .travel__box {
+    background-color: #eee;
+    padding: 1.5rem;
+    flex: 1 0 33%;
+    min-height: 200px;
+    border: 2px solid rgba(237, 118, 105, 0.8);
+    box-shadow: 0.5rem 0.5rem 0.5rem rgba(34, 34, 34, 0.75);
+    transition: all 0.3s;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+    .travel__box:hover {
+      transform: scale(1.1);
+      box-shadow: 0.75rem 0.75rem 0.5rem rgba(34, 34, 34, 0.75); }
+    .travel__box:not(:last-child) {
+      margin-right: 2rem; }
+    .travel__box ul {
+      list-style: none;
+      font-size: 1.3rem; }
+  .travel__map {
+    width: 50%;
+    height: 25rem; }
+
 header {
   background-image: linear-gradient(to right bottom, rgba(237, 118, 105, 0.85), rgba(227, 48, 30, 0.85)), url("http://via.placeholder.com/1920x1080");
   height: 100vh;
@@ -200,7 +273,7 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  font-size: 3rem; }
+  font-size: 2rem; }
   .nav__img {
     width: 10rem;
     height: 10rem; }
@@ -225,6 +298,55 @@ header {
     transition: width 0.2s; }
   .nav__link:hover::after {
     width: 100%; }
+
+footer {
+  width: 100%;
+  height: 20vh;
+  background-color: #333;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center; }
+  footer .top {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 4rem; }
+    footer .top ul {
+      list-style: none;
+      color: #fff;
+      font-size: 1.5rem;
+      letter-spacing: 0.1rem; }
+      footer .top ul li {
+        display: inline-block; }
+        footer .top ul li:hover {
+          cursor: pointer; }
+
+.footer__nav li {
+  margin-left: 1rem; }
+
+.footer__social li {
+  margin-right: 1rem; }
+
+.footer__social--link:link, .footer__social--link:visited {
+  text-decoration: none;
+  color: #fff;
+  position: relative;
+  letter-spacing: 0.1rem;
+  transition: all 0.3s ease; }
+
+.footer__social .facebook:hover {
+  color: #3b5999; }
+
+.footer__social .google:hover {
+  color: #dd4b39; }
+
+.footer__social .twitter:hover {
+  color: #55acee; }
+
+.footer__social .instragam:hover {
+  color: #e4405f; }
 
 .section-feature {
   background-color: white;
@@ -252,6 +374,22 @@ header {
       opacity: 1; }
 
 .section-traditional {
+  background-color: white;
+  padding: 8rem 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around; }
+
+.section-food {
+  background-color: #ed7669;
+  padding: 8rem 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around; }
+
+.section-travel {
   background-color: white;
   padding: 8rem 5rem;
   display: flex;
