--- a/sass/abstracts/_variable.scss
+++ b/sass/abstracts/_variable.scss
@@ -12,3 +12,8 @@ $color-grey-dark-3: #333;
 $color-white: #fff;
 $color-black: #222;
 
+$color-facebook: #3b5999;
+$color-google: #dd4b39;
+$color-twitter: #55acee;
+$color-instragam: #e4405f;
+
