--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -66,3 +66,11 @@ body {
     font-weight: 400;
     color: $color-grey-light-2;
 }
+
+.food-n{
+    font-size: 2rem;
+}
+
+.food-p {
+    font-size: 1.75rem;
+}
