--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,8 +10,11 @@
 @import "components/button.scss";
 @import "components/feature.scss";
 @import "components/traditionals.scss";
+@import "components/foodbox.scss";
+@import "components/travel.scss";
 
 @import "layouts/header.scss";
 @import "layouts/navigation.scss";
+@import "layouts/footer.scss";
 
 @import "pages/home.scss";
